--- a/www/index.html
+++ b/www/index.html
@@ -1,27 +1,13 @@
-<!-- Первая Web-страница -->
-<!-- <!DOCTYPE> необходим, чтобы браузер понимал согласно какому стандарту отображать веб-страницу. -->
-<!DOCTYPE html>
-<html> <!-- Начало Web-страницы -->
-<head> <!-- Начало заголовка Web-страницы -->
-<!-- Описание метаданных, т.е. информации о Web-странице. -->
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
-<title>Первая Web-страница</title> <!-- Описание надписи на вкладке браузера -->
-<!-- Описание вида объектов Web-страницы -->
-<style type= "text/css"> 
- 
- 
-</style>
-</head>
-<script type= "text/javascript" language="JavaScript">
-// Описание сценариев изменения объектов
-
-</script>
-<!-- Описание объектов Web-страницы -->
-<body> 
-<!-- Заголовок 1 типа -->
-<h1>Моя первая Web-страница!</h1> 
-<!-- Обычный текст -->
-Моя первая Web-страница!
-</body>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+ <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>Пример веб-страницы</title>
+ </head>
+ <body>
+  <h1>Заголовок</h1>
+  <!-- Комментарий -->
+  <p>Первый абзац.</p>
+  <p>Второй абзац.</p>
+ </body>
 </html>
-
